Wrote the css for our character's website and change some html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>TinyTAN</title>
+	<link rel="icon" href="img/tinytan-avatar.jpeg">
+	<link href="https://fonts.googleapis.com/css2?family=Sriracha&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="css/hero.css">
 </head>
 <body>
 	<!-- header element -->
@@ -15,7 +18,7 @@
 		<h2>About TinyTAN</h2>
 		<p>TinyTAN, which are BTS inspired animation characters</p>
 		<img src="img/tinytanbig.jpeg">
-		<p>The TinyTAN Gang</p>
+		<p class="caption">The TinyTAN Gang</p>
 		<h2>TinyTAN Members</h2>
 		<ol>
 			<li>Jin</li>
@@ -31,8 +34,8 @@
 		<h2>TinyTAN's Videos</h2>
 		<p>TinyTAN produce videos to spread possitivity and happiness. Click the links below to watch it</p>
 		<ul>
-			<li><a href="https://www.youtube.com/watch?v=LFeiGU35ZzA">Character Trailer</a></li>
-			<li><a href="https://www.youtube.com/watch?v=Yf9Nlq5wrf8">Magic Door</a></li>
+			<li><a target="_blank" href="https://www.youtube.com/watch?v=LFeiGU35ZzA">Character Trailer</a></li>
+			<li><a target="_blank" href="https://www.youtube.com/watch?v=Yf9Nlq5wrf8">Magic Door</a></li>
 		</ul>
 
 	</main>
